src/snapshots/snapshots/telegram__config__tests__empty_bot_token.snap
---
source: src/config.rs
expression: builder.build()
---
Err(
    EmptyField(
        "bot_token",
    ),
)
