src/snapshots/snapshots/telegram__config__tests__limit_above_max.snap
---
source: src/config.rs
expression: builder.build()
---
Err(
    InvalidGetUpdatesLimit(
        101,
    ),
)
