src/snapshots/snapshots/telegram__config__tests__timeout_negative.snap
---
source: src/config.rs
expression: builder.build()
---
Err(
    InvalidGetUpdatesTimeout(
        -1,
    ),
)
